--- a/package.json
+++ b/package.json
@@ -19,13 +19,17 @@
     "@react-navigation/native-stack": "^6.1.0",
     "expo": "~47.0.12",
     "expo-asset": "~8.7.0",
+    "expo-auth-session": "~3.8.0",
     "expo-constants": "~14.0.2",
     "expo-font": "~11.0.1",
     "expo-linking": "~3.3.0",
+    "expo-random": "~13.0.0",
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
     "expo-system-ui": "~2.0.1",
+    "expo-updates": "~0.15.6",
     "expo-web-browser": "~12.0.0",
+    "firebase": "^9.17.1",
     "nativewind": "^2.0.11",
     "react": "18.1.0",
     "react-dom": "18.1.0",
